docs: 게시물 수정 - blog/12-04 까지

--- a/_posts/etc/Blog/2023-12-04-(Blog) 이모티콘과 수식 추가 - 깃 블로그 TIP 3.md
+++ b/_posts/etc/Blog/2023-12-04-(Blog) 이모티콘과 수식 추가 - 깃 블로그 TIP 3.md
@@ -1,7 +1,7 @@
 ---
-title:  "[Blog] 이모티콘 & 수식 추가 - 깃 블로그 TIP 3"
+title:  "[Blog] 이모티콘 & 수식 추가"
 categories : Blog
-tag : [블로그, Git, git blog, 깃허브 블로그, Minimal-mistakes, 지킬, jekyll]
+tag : [블로그, Git, git blog, 깃허브 블로그, Minimal-mistakes, 지킬, jekyll, emoji, mathjax]
 toc: true
 toc_sticky: true
 author_profile: false
@@ -12,14 +12,14 @@ typora-root-url: ../../..
 
 
 
-# Intro
-
 **이모티콘과 수식을 사용할 수 있게끔 적용해보자!**
 
 * 이모티콘 사용 예시 : :smile:
 * 수식 사용 예시 : \\( 𝑐 = \frac{1}{2}(a+b) \\)
 
-<br><br>
+<br>
+
+<br>
 
 ## 이모티콘 추가
 
@@ -38,7 +38,7 @@ plugins:
 
 <br>
 
-**혹시나 에러가 발생시 github-pages 설치유무, 버전의 유무를 참고!**
+**혹시나 에러가 발생시 github-pages 설치 유무, 버전의 유무를 참고!**
 
 * github-pages 설치
   * `Gemfile` 의 `gem "github-pages", group: :jekyll_plugins` 코드 주석 해제
@@ -53,7 +53,9 @@ plugins:
 * [emoji 목록](https://gist.github.com/rxaviers/7360908) 을 보고 원하는 이모티콘 사용
 * 스마일 이모티콘 예시 : `:smile:` 입력 -> :smile:
 
-<br><br>
+<br>
+
+<br>
 
 ## 수식 추가
 
@@ -89,7 +91,7 @@ defaults:
       related: true
       show_date : true
       sidebar_main: true
-      mathjax: true # 이부분 입니다.
+      mathjax: true # 이부분입니다.
 ```
 
 <br>
