docs: 게시물 수정 - blog/12-06 까지 함

--- a/_posts/etc/Blog/2023-12-05-(Blog) 카테고리와 목차 추가하기(상단바, 사이드바) - 깃 블로그 TIP 4.md
+++ b/_posts/etc/Blog/2023-12-05-(Blog) 카테고리와 목차 추가하기(상단바, 사이드바) - 깃 블로그 TIP 4.md
@@ -1,7 +1,7 @@
 ---
-title:  "[Blog] 카테고리와 목차 추가하기(상단바, 사이드바) - 깃 블로그 TIP 4"
+title:  "[Blog] 카테고리와 목차 추가하기(상단 바, 사이드 바)"
 categories : Blog
-tag : [블로그, Git, git blog, 깃허브 블로그, Minimal-mistakes, 지킬, jekyll]
+tag : [블로그, Git, git blog, 깃허브 블로그, Minimal-mistakes, 지킬, jekyll, TOC, 목차, 네비게이션바, 사이드바]
 toc: true
 toc_sticky: true
 author_profile: false
@@ -12,52 +12,51 @@ typora-root-url: ../../..
 
 
 
-# Intro
+**웹 상단의 네비게이션 바, 왼쪽 사이드 바, 해당 카테고리를 들어가면 나와야 하는 대표 페이지, 목차TOC 를 추가하는 법을 알아보자.**
 
-댓글이나 검색엔진에 노출시키거나 등등 이런거 하나하나 정리할 생각은 없다.
+<br>
 
-이런것은 본인이 참고했던 [참고문헌](https://youtu.be/3UOh0rKlxjg?si=yGrGhJSgFLH2t3jK) 확인! + [찐 참고문헌](https://ansohxxn.github.io/blog/category/)
+<br>
 
-그러나, `카테고리`와 `목차`는 중요한 정보라고 생각하기에 이 2개만 정리해보자!
+## 미리보기
 
 **웹 상단에 존재하는 네비게이션 바의 Category**
 
-![image](https://github.com/BH946/bh946.github.io/assets/80165014/91047770-13ce-4e45-91f5-23cd9b8379c2)  
+![네비게이션바](https://github.com/BH946/bh946.github.io/assets/80165014/91047770-13ce-4e45-91f5-23cd9b8379c2)  
 
 <br>
 
 **카테고리별 존재하는 대표 페이지**
 
-![image](https://github.com/BH946/bh946.github.io/assets/80165014/5fe7d979-9126-4668-95d0-3d90abd51df2) 
+![대표페이지](https://github.com/BH946/bh946.github.io/assets/80165014/5fe7d979-9126-4668-95d0-3d90abd51df2) 
 
 <br>
 
-**왼쪽 사이드바의 카테고리**
+**왼쪽 사이드 바의 카테고리**
 
-<img src="https://github.com/BH946/bh946.github.io/assets/80165014/36349f82-ab47-4dde-b76c-5f2a7087dd3f" alt="image" style="zoom:80%;" />  
+<img src="https://github.com/BH946/bh946.github.io/assets/80165014/36349f82-ab47-4dde-b76c-5f2a7087dd3f" alt="사이드바" style="zoom:80%;" />  
 
 <br>
 
-**본문내에 존재하는 목차(TOC)**
+**본문 내에 존재하는 목차(TOC)**
 
-<img src="https://github.com/BH946/bh946.github.io/assets/80165014/39d970cb-d55e-4b69-bc10-f6006188efe5" alt="image" style="zoom:80%;" /> 
+<img src="https://github.com/BH946/bh946.github.io/assets/80165014/39d970cb-d55e-4b69-bc10-f6006188efe5" alt="목차" style="zoom:80%;" /> 
+
+<br>
+
+<br>
+
+## 카테고리와 목차
+
+>  위에서 본 사진들은 최근 사진이므로 스타일링이 전부 적용된 상태입니다!
+>
+>  자꾸 ruby 문법이 자동 실행이 돼버려서 "ruby 코드는 사진으로 대체"
+
+**[찐 참고문헌](https://ansohxxn.github.io/blog/category/) 이 분이 정말 잘 정리하셨다! 참고하자~~**
 
 <br><br>
 
-# 카테고리와 목차
-
->  위에서 본 사진들은 최근 사진이므로 스타일링이 전부 적용되어 있는 상태입니다!
-
-먼저, 카테고리와 목차 설정을 제대로 따라하고 싶다면 Intro에서 소개한 "참고문헌" 영상을 꼭 참고!
-
-**자꾸 ruby 문법이 자동 실행이 되버려서 "사진으로 코드 대체"**
-
-* 코드가 보고싶다면 [찐 참고문헌](https://ansohxxn.github.io/blog/category/)
-* 이분이 정말 잘 정리하셨음!
-
-<br>
-
-## 카테고리 웹 상단 추가 + 태그
+### 웹 상단 "Category" 추가와 태그
 
 먼저, `_config.yml` 에서 아래 코드처럼 주석 해제를 해주며 잘 있는지 확인하자
 
@@ -107,7 +106,7 @@ sidebar_main : true
 
 <br>
 
-`_data` 폴더에 `navigation.yml` 파일을 아래 코드처럼 작성하면 "웹 상단 네비게이션 바"에 `Category`
+`_data` 폴더에 `navigation.yml` 파일을 아래 코드처럼 작성하면 "웹 상단 네비게이션 바"에 `Category` 생성
 
 ```yaml
 # main links
@@ -122,76 +121,78 @@ main:
 
 <br>
 
-여기 까지 성공하면 앞에서 보여준 이부분이 끝난 것이다.
+여기 까지 성공하면 앞에서 보여준 이 부분이 끝난 것이다.
 
 > 웹 상단에 존재하는 네비게이션 바의 Category
 >
-> ![image](https://github.com/BH946/bh946.github.io/assets/80165014/91047770-13ce-4e45-91f5-23cd9b8379c2) 
+> ![네비게이션바](https://github.com/BH946/bh946.github.io/assets/80165014/91047770-13ce-4e45-91f5-23cd9b8379c2) 
 
 <br><br>
 
-## 카테고리별 대표 페이지 추가
+### 카테고리별 대표 페이지 추가
 
 먼저 아래와 같이 카테고리를 등록해줍니다! -> 예시로 `_pages/categories/category-algo.md` 
 
-![image](https://github.com/BH946/bh946.github.io/assets/80165014/a24c7ea6-ef89-4b49-97e6-7436900484c4) 
+![카테고리별 대표페이지](https://github.com/BH946/bh946.github.io/assets/80165014/a24c7ea6-ef89-4b49-97e6-7436900484c4) 
 
 <br>
 
 코드 내용은 아래와 같습니다
 
 * archive 를 레이아웃으로 가지며 include를 보면 `archive-single2.html` 이 존재하는데, 이것은 직접 추가한 파일입니다.
-* 이곳의 `title` 은 실제 페이지의 제목이 됩니다.
-  * 앞에서 본 "지식/정보" 제목 부분입니다.
+* 이곳의 `title` 은 실제 **대표 페이지의 제목**이 됩니다.
+  * 앞에서 본 **"지식/정보"** 제목 부분입니다.
 
-![image](https://github.com/BH946/bh946.github.io/assets/80165014/fcebe8c7-caf2-4343-8876-08cfbbe71452) 
+![대표 페이지 설정](https://github.com/BH946/bh946.github.io/assets/80165014/fcebe8c7-caf2-4343-8876-08cfbbe71452) 
 
 <br>
 
 `_includes/archive-single2.html` 의 코드는 아래와 같으며 없으면 만듭니다.
 
-* "[체크리스트] Sprin..." 부분인 게시글 제목 부분 역할을 합니다.
+* **"[체크리스트] Sprin..."** 부분인 대표 페이지 본문에 게시글 리스트의 **각 제목 부분** 역할을 합니다.
 * 코드에 보면 `post__taxonomy.html` 부분이 있는데 이것도 추가한 파일입니다.
-  * "[체크리스트] Spr..." 오른쪽에 있는 카테고리, 태그 내용부분 입니다.
+  * **"[체크리스트] Spr..." 오른쪽에 있는 카테고리, 태그** 부분입니다.
 
-![image](https://github.com/BH946/bh946.github.io/assets/80165014/e09974e2-ab02-479c-a3fd-0e8b0d4e1891) 
-
-<br>
-
-`_includes/post__taxonomy.html` 의 코드입니다. 자유롭게 커스텀하면 됩니다.
-
-![image](https://github.com/BH946/bh946.github.io/assets/80165014/f759e7b4-1d9b-4449-9f67-7b16fac804f9) 
-
-![image](https://github.com/BH946/bh946.github.io/assets/80165014/9015536e-9924-484e-af24-35173c96a154) 
+![archive-single](https://github.com/BH946/bh946.github.io/assets/80165014/e09974e2-ab02-479c-a3fd-0e8b0d4e1891) 
 
 <br>
 
-> 카테고리별 존재하는 대표 페이지
+방금 언급한 `_includes/post__taxonomy.html` 의 코드입니다. 자유롭게 커스텀하면 됩니다.
+
+![post__taxonomy](https://github.com/BH946/bh946.github.io/assets/80165014/f759e7b4-1d9b-4449-9f67-7b16fac804f9) 
+
+![post__taxonomy](https://github.com/BH946/bh946.github.io/assets/80165014/9015536e-9924-484e-af24-35173c96a154) 
+
+<br>
+
+여기까지가 아래 사진 부분이다.
+
+> 카테고리별 존재하는 대표 페이지와 본문에 존재하는 각 게시물 제목, 날짜, 태그정보
 >
-> ![image](https://github.com/BH946/bh946.github.io/assets/80165014/5fe7d979-9126-4668-95d0-3d90abd51df2) 
+> ![카테고리별 페이지 커스텀](https://github.com/BH946/bh946.github.io/assets/80165014/5fe7d979-9126-4668-95d0-3d90abd51df2) 
 
 <br><br>
 
-## 왼쪽 사이드바에 카테고리 추가
+### 왼쪽 사이드 바에 카테고리 추가
 
 `_includes/nav_list_main` 파일을 만들어서 왼쪽 사이드바의 모습을 구성합니다.
 
 * 확장자명 없습니다!
 * 이를 `sidebar.html` 에 포함시키면 됩니다!
 
+<br>
 
+`_includes/nav_list_main` 의 코드를 참고하여 커스텀! 코드는 쉬워서 해석하기 간단할 거다!
 
-`_includes/nav_list_main` 의 코드를 참고하여 커스텀!
+![nav_list_main](https://github.com/BH946/bh946.github.io/assets/80165014/5faecacb-306d-4b41-ab2a-658c5771507b) 
 
-![image](https://github.com/BH946/bh946.github.io/assets/80165014/5faecacb-306d-4b41-ab2a-658c5771507b) 
-
-![image](https://github.com/BH946/bh946.github.io/assets/80165014/3e177551-19a5-4e73-b3ed-18a8f954978c) 
+![nav_list_main](https://github.com/BH946/bh946.github.io/assets/80165014/3e177551-19a5-4e73-b3ed-18a8f954978c) 
 
 <br>
 
-`sidebar.html` 의 코드 - 핵심은 nav_list_main 를 include 하는 코드입니다!
+`sidebar.html` 의 코드 - 핵심은 nav_list_main 를 include 하는 코드!
 
-![image](https://github.com/BH946/bh946.github.io/assets/80165014/f4f59e84-65bb-497f-b056-b00a67db7365) 
+![sidebar](https://github.com/BH946/bh946.github.io/assets/80165014/f4f59e84-65bb-497f-b056-b00a67db7365) 
 
 <br>
 
@@ -199,35 +200,37 @@ main:
 
 <br>
 
+이번 커스텀은 아래 사진처럼 왼쪽 사이드바를 의미!
+
 > 왼쪽 사이드바의 카테고리
 >
-> <img src="https://github.com/BH946/bh946.github.io/assets/80165014/36349f82-ab47-4dde-b76c-5f2a7087dd3f" alt="image" style="zoom:80%;" />  
+> <img src="https://github.com/BH946/bh946.github.io/assets/80165014/36349f82-ab47-4dde-b76c-5f2a7087dd3f" alt="사이드바" style="zoom:80%;" />  
 
 <br><br>
 
-## 목차(TOC) 설정
+### 목차(TOC) 설정
 
-정말 정말 간단하게 포스팅 하는 md파일속에 `toc: true` 를 사용하면 끝이다.
+정말 정말 간단하다!! 포스팅하는 md파일속에 `toc: true` 를 사용하면 끝이다.
 
-아래에 설명할 "세팅이 완료된 후 포스팅 방식" 부분을 참고하자!
+아래에 설명할 **"TIP) md파일 포스팅할 때(YFM 설정) + 카테고리 추가하는 흐름"** 부분을 참고하자!
 
-> 본문내에 존재하는 목차(TOC)
+> 본문 내에 존재하는 목차(TOC)
 >
-> <img src="https://github.com/BH946/bh946.github.io/assets/80165014/39d970cb-d55e-4b69-bc10-f6006188efe5" alt="image" style="zoom:80%;" /> 
+> <img src="https://github.com/BH946/bh946.github.io/assets/80165014/39d970cb-d55e-4b69-bc10-f6006188efe5" alt="TOC" style="zoom:80%;" /> 
 
 <br><br>
 
-## 세팅이 완료된 후 포스팅 방식
+### TIP) md파일 포스팅할 때(YFM 설정) + 카테고리 추가하는 흐름
 
-**본인의 경우** `--- ... ---` **에 작성하는 코드는 아래와 같습니다.**
+본인이 `--- ... ---` 에 설정하는 코드는?? 아래 참고 **-> 게시물 설정 YFM(YAML Front Matter) 를 의미**
 
 * title 을 통해 제목!
 * categories 를 통해 카테고리별 대표 페이지 만들었던 md 파일에서의 `site.categories.Blog` 의 Blog 작성
-* tag 를 여러가지 작성하여 "search" 가 잘 되게끔
+* tag 를 여러 가지 작성하여 "search" 가 잘 되게끔
 * toc 를 true로 하여 "목차"를 사용
-* toc_stiky 를 true로 하여 "목차고정"을 사용
+* toc_stiky 를 true로 하여 "목차고정"을 사용 -> 마우스 휠 위아래 움직여도 목차 위치 고정
 * author_profile 을 false로 하여 기존 프로필을 가리고, sidebar-nav-"docs" 를 활성화하여 나타냅니다.
-  * `_data/navigation.yml` 에 따로 등록해놨으며 이 내용은 다음 포스팅에서 추가 설명 합니다.
+  * `_data/navigation.yml` 에 따로 등록해놨으며 이 내용은 다음 포스팅에서 추가 설명합니다.
 * typora-root-url 로 root 경로를 설정하여 이미지 경로를 상대경로로 잘 맞춰 둡니다.
 
 ```markdown
@@ -246,26 +249,29 @@ typora-root-url: ../../..
 
 <br>
 
-**카테고리를 추가할 때 흐름은** `카테고리별 대표 페이지 생성 -> nav_list_main 작성 -> 실제 포스팅할 때 categories 입력` 
+**카테고리를 추가할 때 흐름은** `카테고리별 대표 페이지 생성(md파일) -> nav_list_main 에 추가 -> 실제 포스팅할 때 categories:카테고리명 입력` 
 
-Blog 카테고리를 예로들자면
+**Blog라는 카테고리를 예로 들면??**
 
-* 먼저, `_pages/categories/category-blog.md` 파일을 만들고 카테고리명을 Blog로 설정합니다.
+1. 먼저, `_pages/categories/category-blog.md` 파일을 만들고 카테고리 명을 Blog로 설정합니다.
 
-  ![image](https://github.com/BH946/bh946.github.io/assets/80165014/8347b370-67ad-42cb-a9b5-8678acd1e9d4) 
+![카테고리추가법1](https://github.com/BH946/bh946.github.io/assets/80165014/8347b370-67ad-42cb-a9b5-8678acd1e9d4) 
 
-* 그리고 `_includes/nav_list_main` 에서 해당 카테고리를 적절히 추가합니다.
+<br>
 
-  ![image](https://github.com/BH946/bh946.github.io/assets/80165014/6ecfbd29-9713-4c6d-bd42-2a7fe9a3ce4f) 
+2. 그리고 `_includes/nav_list_main` 에서 해당 카테고리를 적절히 추가합니다.
 
-* 마지막으로 포스팅할 때 이 카테고리를 사용합니다.
+![카테고리추가법2](https://github.com/BH946/bh946.github.io/assets/80165014/6ecfbd29-9713-4c6d-bd42-2a7fe9a3ce4f) 
 
-  ```markdown
-  ---
-  ...
-  categories : Blog
-  ...
-  ---
-  ```
+<br>
 
-  
+3. 마지막으로 포스팅할 때 이 카테고리를 사용합니다.
+
+```markdown
+---
+...
+categories : Blog
+...
+---
+```
+
