--- a/_posts/etc/Blog/2023-12-06-(Blog) 페이지 배치 따라하기(카테고리별 대표 페이지) - 깃 블로그 TIP 5.md
+++ b/_posts/etc/Blog/2023-12-06-(Blog) 페이지 배치 따라하기(카테고리별 대표 페이지) - 깃 블로그 TIP 5.md
@@ -1,7 +1,7 @@
 ---
-title:  "[Blog] 페이지 배치 따라하기(카테고리별 대표 페이지) - 깃 블로그 TIP 5"
+title:  "[Blog] 페이지 배치 따라하기(카테고리별 대표 페이지)"
 categories : Blog
-tag : [블로그, Git, git blog, 깃허브 블로그, Minimal-mistakes, 지킬, jekyll]
+tag : [블로그, Git, git blog, 깃허브 블로그, Minimal-mistakes, 지킬, jekyll, 제목변경, 밑줄제거]
 toc: true
 toc_sticky: true
 author_profile: false
@@ -12,52 +12,56 @@ typora-root-url: ../../..
 
 
 
-# Intro
-
-**폰트나 스타일링은 우선 배제하고 페이지의 구조를 따라해보자**
+**폰트나 스타일링은 우선 배제하고 "카테고리별 대표 페이지의 구조"를 따라 해보자**
 
 <br>
 
-처음에는 보통 `home.html` 을 통해서 **"최근 포스트"** 들이 기본적으로 구성한다.
+처음에는 보통 `home.html` 을 통해서 **"최근 포스트"** 들이 기본으로 구성한다.
 
-이를 앞에서 이미 **"Recent Posts"** 로 이름을 바꾸는것은 진행을 했다!
+이를 앞 포스팅에서 이미 **"Recent Posts"** 로 이름을 바꾸는 것은 진행을 했다!
 
-그렇다면 카테고리를 등록했을 때 **카테고리별 대표 페이지**를 아래와 같이 만들고 싶다면?? 따라해보자!
+그렇다면 카테고리를 등록했을 때 **카테고리별 대표 페이지**는 어떻게 커스텀하는 걸까? 커스텀을 아래와 같이 만들고 싶다면?? 따라 해보자!
 
 **기존 페이지 모습**
 
-![image-20220909155800719](/images/2023-12-05-(Blog) 페이지 배치 따라하기(카테고리, 최근포스트 등) - 깃 블로그 TIP 4/image-20220909155800719.png) 
+![기존페이지](/images/2023-12-05-(Blog) 페이지 배치 따라하기(카테고리, 최근포스트 등) - 깃 블로그 TIP 4/image-20220909155800719.png) 
 
 <br>
 
-**따라할 카테고리별 페이지의 모습**
+**따라 할 카테고리별 페이지의 모습**
 
-![image-20220909164115281](/images/2023-12-05-(Blog) 페이지 배치 따라하기(카테고리, 최근포스트 등) - 깃 블로그 TIP 4/image-20220909164115281.png) 
+![커스텀페이지](/images/2023-12-05-(Blog) 페이지 배치 따라하기(카테고리, 최근포스트 등) - 깃 블로그 TIP 4/image-20220909164115281.png) 
+
+<br>
+
+<br>
+
+## "카테고리별 대표 페이지"의 커스텀 따라 하기
+
+`제목 변경 -> 밑줄 제거` 순으로 소개
+
+**이전 포스팅에서 이어지는 내용이므로 여기선 "제목 변경, 밑줄 제거"만 소개한 것이다.**
+
+**[이전 포스팅 참고](https://bh946.github.io/blog/(Blog)-%EC%B9%B4%ED%85%8C%EA%B3%A0%EB%A6%AC%EC%99%80-%EB%AA%A9%EC%B0%A8-%EC%B6%94%EA%B0%80%ED%95%98%EA%B8%B0(%EC%83%81%EB%8B%A8%EB%B0%94,-%EC%82%AC%EC%9D%B4%EB%93%9C%EB%B0%94)-%EA%B9%83-%EB%B8%94%EB%A1%9C%EA%B7%B8-TIP-4/)**
 
 <br><br>
 
-# 페이지 배치 따라하기
-
-`제목 변경 -> 밑줄 제거`
-
-<br>
-
-## 제목 변경
+### 제목 변경
 
 제목 스타일을 보면 "Recent Posts" 스타일과 많이 다르다. 따라서 이를 통일해주기 위해 "Recent Posts" 제목을 제거한다.
 
 * `_layouts/home.html` 을 보면 "Recent Posts" 를 나타내는 h태그가 있는데 이를 "주석처리"
-* 이후 `_layouts/archive.html` 에서 아래와 같이 코드를 작성하여 "두 제목"을 한번에 관리하자!
-* `archive__subtitle__default` 를 `archive.scss`에 추가로 정의하게 되고, 자세한 스타일링은 다음 포스팅을 참고하자
+* 이후 `_layouts/archive.html` 에서 아래와 같이 코드를 작성하여 **"두 제목"을 한 번에 관리**하자!
+* `archive__subtitle__default` 를 `archive.scss`에 추가로 정의하는데 **자세한 스타일링은 다음 포스팅**을 함께 참고!
 
-![image-20230315021636448](/images/2023-12-06-(Blog) 페이지 배치 따라하기(카테고리별 대표 페이지) - 깃 블로그 TIP 5/image-20230315021636448.png) 
+![archive](/images/2023-12-06-(Blog) 페이지 배치 따라하기(카테고리별 대표 페이지) - 깃 블로그 TIP 5/image-20230315021636448.png) 
 
 <br><br>
 
-## 밑줄 제거
+### 밑줄 제거
 
-사진에서 포스팅글들 보면 제목들이 밑줄이 있는데 이를 제거한다.  
-보통 `archive.html` 을 사용하지만, 필자는 따로 수정한 파일을 사용하므로 `archive-single2.html` 에 변경
+사진에서 포스팅 된 글들을 보면 제목들이 밑줄이 있는데 이를 제거한다.  
+보통 `archive.html` 을 사용하지만, 필자는 따로 수정한 파일을 사용하므로 `archive-single2.html` 에서 변경
 
 * `includes/archive-single2.html` 에서 `text-decoration="none"` 속성을 추가한다.
 
@@ -71,7 +75,7 @@ typora-root-url: ../../..
 
 `_base.scss` 에서 설정한 a태그의 스타일에서 `text-decoration="none"` 속성을 추가한다.
 
-* 이 방식은 a태그의 경우 전부 밑줄 없애버렸기 때문에 그점은 알아둘것
+* 이 방식은 a태그 전부를 밑줄 없애 버리므로 그 점은 알아둘것
 
 ```scss
 /* links */
