--- a/_posts/Coding_Test/Baekjoon_Concept/2023-01-11-(백준_필수3)알고리즘 템플릿 - java.md
+++ b/_posts/Coding_Test/Baekjoon_Concept/2023-01-11-(백준_필수3)알고리즘 템플릿 - java.md
@@ -77,6 +77,7 @@ typora-root-url: ../../..
     `Deque<Integer> qu = new ArrayDeque<>();`
     - **스택은 push, pop, peek**
     - **큐는 offer, poll, peek**
+    - **덱은 큐에 First, Last만 추가** -> ex: offerFirst, pollFirst, peekFirst ... 
     - 아래 정리된 코드들은 **"옛날코드"** 많아서 햇갈리지 말것(스택, 큐)
   - 이분탐색 : `binarySearch, lower_bound, upper_bound` **직접 구현 방법 기억**
     - 정리해둔 이분탐색 목차 참고 -> **"[자바의 binarySearch](https://bh946.github.io/baekjoon/(%EB%B0%B1%EC%A4%80_%ED%95%84%EC%88%983)%EC%95%8C%EA%B3%A0%EB%A6%AC%EC%A6%98-%ED%85%9C%ED%94%8C%EB%A6%BF-java/#%EC%9D%B4%EB%B6%84%ED%83%90%EC%83%89binarysearch)"**
@@ -205,7 +206,7 @@ typora-root-url: ../../..
 
 - EX9) **슬라이딩 윈도우 알고리즘 (Sliding Window)**
 
-  - [DNA 비밀번호](https://www.acmicpc.net/problem/12891) -> 참고 문제
+  - [DNA 비밀번호](https://www.acmicpc.net/problem/12891) -> 참고로 "부분문자열" 은 **연속**이다.
 
   - **맨 앞 문자는 제거, 새문자가 맨 뒤에 추가** -> 핵심
 
