--- a/_posts/Coding_Test/Programmers_Test/2023-04-02-(MySQL)LV 4 문제 모음.md
+++ b/_posts/Coding_Test/Programmers_Test/2023-04-02-(MySQL)LV 4 문제 모음.md
@@ -79,7 +79,7 @@ from animal_outs a right join newTable b on (hour(a.datetime)=b.hour) `
 
 <br><br>
 
-## 문제 2 - 서브쿼리, limit
+## 문제 2 - 서브쿼리, limit, order by에 집계함수
 
 * **[그룹별 조건에 맞는 식당 목록 출력하기](https://school.programmers.co.kr/learn/courses/30/lessons/131124)**
 
@@ -107,14 +107,15 @@ order by b.review_date, b.review_text;
 
 **서브쿼리를 통해서 해당 회원을 구했는데, 이때 max 함수가 아니라 limit 으로 구하면 된다.**
 
-- max, limit 항상 둘다 생각해보자.
+order by 에는 집계함수도 올 수 있다. 따라서 그룹별 `count(*)` 로 정렬을 했다.
+
+- 또는 인라인뷰에 윈도우함수로 랭크 매기고, 메인에서 1등 랭크인지 필터링 하면된다. 
 
 <br><br>
 
 ## 문제 3 - count(distinct a.user_id)
 
-* **[그룹별 조건에 맞는 식당 목록 출력하기](https://school.programmers.co.kr/learn/courses/30/lessons/131124)**
-
+* **[년, 월, 성별 별 상품 구매 회원 수 구하기](https://school.programmers.co.kr/learn/courses/30/lessons/131532)**
 
 <br>
 
@@ -139,6 +140,10 @@ order by year, month, gender;
 이를 제거하기 위해 distinct를 사용!
 
 - **count 함수 안에서 사용했다는게 특징**
+- **이 방식은 각 회원이 특정 기간에 여러 번 구매하더라도, 그 회원은 한 번만 카운트 되도록 하기 위함**
+  - 문제의 이러한 요구사항 때문에 중복 제거를 사용하게 됨.
+  - 1:N 관계이므로 전체 행이 중복일 수는 없음. N:N이면 모를까. 그래도 distinct를 쓴 이유가 위의 이유임.
+
 
 <br><br>
 
@@ -177,8 +182,7 @@ order by a.sales_date, a.product_id, a.user_id;
 
 ## 문제 5 - timestamp<->date 차이
 
-* **[오프라인/온라인 판매 데이터 통합하기](https://school.programmers.co.kr/learn/courses/30/lessons/131537)**
-
+* **[취소되지 않은 진료 예약 조회하기](https://school.programmers.co.kr/learn/courses/30/lessons/132204)**
 
 <br>
 
@@ -198,9 +202,11 @@ order by a.apnt_ymd;
 
 join3개를 했고, date() 함수를 사용했다.
 
+컬럼이 테이블 전부 사용하다 보니(출력) 중복 걱정도 없다.
+
 <br><br>
 
-## 문제 6 - join, group by
+## 문제 6 - join, group by, order by 심화
 
 * **[ 주문량이 많은 아이스크림들 조회하기](https://school.programmers.co.kr/learn/courses/30/lessons/133027)**
 
@@ -227,10 +233,12 @@ limit 3;
 - 7월 아이스크림 총 주문량은 july 테이블이며 그룹핑을 사용해서 sum 함수를 써야 구해진다.
 - 상반기의 아이스크림 총 주문량은 first_half 테이블이며 바로 해당 컬럼을 사용하면 된다.
 - 이 둘을 더해서 정렬해야 상위 3개의 맛을 조회할 수 있다.
+  - **order by** 가 이런 집계함수 뿐만아니라 연산하는 컬럼도 적용된다.
+
 
 <br><br>
 
-## 문제 7 - with(CTE)
+## 문제 7 - with(CTE), 스칼라 서브쿼리
 
 * **[자동차 대여 기록 별 대여 금액 구하기](https://school.programmers.co.kr/learn/courses/30/lessons/151141)**
 
@@ -305,7 +313,7 @@ order by fee desc, a.car_type, a.car_id desc;
 
 <br><br>
 
-## 문제 9 - bit 비교 자세히
+## 문제 9 - bit 비교 자세히, any 사용
 
 * **[FrontEnd 개발자 찾기](https://school.programmers.co.kr/learn/courses/30/lessons/276035)**
 * **[언어별 개발자 분류하기](https://school.programmers.co.kr/learn/courses/30/lessons/276036)**
@@ -374,6 +382,10 @@ from developers
 group by grade, id, email
 having grade is not null
 order by grade asc, id asc;
+
+-- 참고로 any -> exists 둘이 비슷하다~
+when 0 < any (select skill_code & code from skillcodes where category = 'front end') then 'C'
+when exists (select 1 from skillcodes where skill_code & code and category = 'front end') then 'C'
 ```
 
 <br>
