docs: 게시물들 수정

--- a/_posts/Coding_Test/Baekjoon_Concept/2023-01-11-(백준_필수3)알고리즘 템플릿 - java.md
+++ b/_posts/Coding_Test/Baekjoon_Concept/2023-01-11-(백준_필수3)알고리즘 템플릿 - java.md
@@ -128,16 +128,19 @@ typora-root-url: ../../..
 
 **자주 나오는 로직은 그냥 외우자 -> "시뮬레이션(구현)"**
 
-- EX0) **"정렬 암기"** -> `Long.compare(a.x, b.x) 는 a.x < b.x ? -1 : (a.x==b.x?0:1) 와 동일`
-
+- EX0) **"정렬 암기"** -> `Long.compare(a.x, b.x) 는 a.x < b.x ? -1 : (a.x==b.x?0:1) 와 동일`  
+  **String**은 `A.compareTo(B)` 활용! (이미 구현된 메소드임)
+  
   - `정렬`은 **"객체"** 사용시 **객체 class에 오버라이딩** 추천,   
-    "기본타입"이면 **바로 오버라이딩** 추천 -> 익명 클래스 사용보단 간편한 **람다** 추천
+    **"기본타입"** 사용시 **바로 오버라이딩** 추천 -> 익명 클래스 사용보단 간편한 **람다** 추천
+    
   - 참고) Arrays.sort(Quick), Collections.sort(Merge)
+
   - 참고) lambda 는 @FunctionalInterface 인 경우에만 사용가능 -> ex : Comparator
     - @FunctionalInterface는 추상 메소드가 1개만 있는것을 보장
-
+  
   - **정렬 코드 예시**
-
+  
   - ```java
     // lambda -> 추천!! -> start, end 처럼 "구간 설정"도 가능!!(중요)
     Arrays.sort(inArr, start, end, (n1, n2) -> n1-n2);
@@ -155,10 +158,13 @@ typora-root-url: ../../..
         public int compareTo(Node o) { return this.y - o.y; }
     }
     ```
-
-  - **문자열 비교 equals, hasCode 오버라이딩 예시** -> 이것도 오버라이딩이라 추가해보았다.
-
-  - ```java
+  
+  - **문자열 비교 equals, hasCode 오버라이딩 예시** -> 이것도 객체 만들었다면 필수 필수!! -> **Set**같은 중복제거 자료구조 사용 시 **무조건 오버라이딩 필요**
+  
+    - 첫번째 코드는 좀 더 유연하긴 하다. (instanceof 는 Item 클래스의 서브 클래스도 포함해줌)
+    - **두번째 코드는 좀 더 엄격해서 권장! (동일 클래스만 포함) -> 이걸 기억!**
+  
+    ```java
     @Override
     public int hasCode() {
         return Objects.hash(itemId, itemNm);
@@ -175,6 +181,26 @@ typora-root-url: ../../..
         return false;
     }
     ```
+  
+    ```java
+    static class Pair{
+        char a; char b;
+        public Pair(char a, char b) {
+            this.a=a; this.b=b;
+        }
+        @Override
+        public boolean equals(Object obj){
+            if (this==obj) return true;
+            if (obj == null || this.getClass() != obj.getClass()) return false;
+            Pair p = (Pair) obj;
+            return this.a==p.a && this.b==p.b;
+        }
+        @Override
+        public int hashCode() {
+            return Objects.hash(a, b); //hashCode 도 필수
+        }
+    }
+    ```
 
 * EX1) 2차원 **배열 회전 로직**은 `B[x][y]=A[N-1-y][x]`
   * 단 x,y가 0부터 시작 -> N-1, M-1은 끝자리 인덱스 의미
@@ -186,22 +212,61 @@ typora-root-url: ../../..
   * **추가3)** **분할정복**(똑같은 크기로 분할 때) -> **좌표이동 ( + 크기** 활용 )
     * `x+=N` 이나 `y+=N` 같이 좌표 이동을 하되 **특정한 크기(N)** 을 사용한 이동
     * **최적화 : 원하는값 있는부분으로만 분할정복**
+  
 * EX2) **dx, dy**로 1칸씩 같던 것을 **끝까지 이동(while)**하는것 -> dx, dy를 좌표에 더할수록 해당 방향으로 계속 이동 가능하단 점을 알아두자
   * **추가1) 2048 or 모노미노도미노2** 처럼 **끝까지 이동(while) + 범위 넘으면 원복(--)** 방식 괜찮음
   * 이것을 **"하나의 함수" 로 구성**하여 "각각의 좌표나 행,열"로 **각각 재사용 추천**
   * **"오른쪽 방향일때 오른쪽부터 접근해야하는가"** 이런것도 꼭 고려!
+  
 * EX3) **투포인터**의 개념을 잘 생각 -> 두개의 배열을 인덱스 따로 하여 따로 동작하고 싶을때도 있기에 이 개념을 기억해두자 -> [용액_2467 백준](https://www.acmicpc.net/problem/2467)
+
 * EX4) **배열의 인덱스를 실제 숫자**로 치환하여 생각하는 방식 -> 숫자 빈도수 구하거나 등등...
-* EX5) **"빈도수"** 구할때 List[] 도 있지만, **HashMap** 에 담으려 노력해보자 (자료구조 활용)
+
+* EX5) **"빈도수"** 구할때 List[] 도 있지만, **HashMap** 에 담으려 노력해보자 **(자료구조 활용)**
 
   - `Map<Integer, Integer> map = new HashMap<>(); // <number, count>`
+  
   - `hm.put("java", hm.getOrDefault("java", 0)+1);` -> **put, get 함수** 기억
+  
+  - ```java
+    Map<Character, Set<Character>> neighborMap = new HashMap<>();
+    Set<Character> neighbors = bfs(i, j);
+    char country = grid[i][j];
+    if(neighborMap.get(country) == null) {
+        neighborMap.put(country, neighbors);
+    }
+    else {
+        for (Character c : neighbors) {
+            neighborMap.get(country).add(c);
+        }
+    }
+    //위 코드를 한줄로 만들어주는 computeIfAbsent 메소드도 기억
+    neighborMap.computeIfAbsent(country, k -> new HashSet<>()).addAll(neighbors);
+    ```
+  
+  - **HashSet은 중복제거에 활용하기 좋다!! -> 객체는 equals, hashCode 필수!**
+  
+    - ```java
+      Set<Pair> uniquePairs = new HashSet<>();
+      for (char neighbor : neighbors) {
+          if (country < neighbor) { //asc
+              uniquePairs.add(new Pair(country, neighbor));
+          } else {
+              uniquePairs.add(new Pair(neighbor, country));
+          }
+      }//A-B, B-A 구분은 사전 순 정렬로 해결하여 중복을 방지 (오버라이딩 필수)
+      ```
+  
+    - **사용자 클래스의 경우 오버라이딩 안하면 중복 검증에 실패**한다. 일반 타입은 당연히 성공하고!
+  
 * EX6) 보통 "시뮬레이션"은 복잡도가 높지않아 **배열 상태를 매번 새로 복제** 잘 고려 -> 한번씩 이런 사소한 할당에서 문제가 발생
   * `int[][] backup = new int[10][10];`
   * 이후에 backtracking 에 사용할 수도 있으니 이런 복제도 잘 고려
+  
 * EX7) 2차원 좌표 **구간합** 방식 -> `sum[i-1][j] ` 와 `현재 가로방향(->) 누적값` 과 `inArr[i][j] 현재값`
   * 즉, `sum[i][j] = sum[i-1][j](바로위) + 해당 i행의 가로방향(->) 누적값 + inArr[i][j]`
   * <img src="https://github.com/BH946/bh946.github.io/assets/80165014/fe2ddcdc-0a57-40a8-8b84-81f87b2306b8" alt="image" style="zoom: 33%;" /> 
+  
 * EX8) **반시계는 시계방향 3번**과 동일하다 -> **단, 90도일때!!** 90도 아니면 해당아님!!
 
 - EX9) **슬라이딩 윈도우 알고리즘 (Sliding Window)**
