docs: alog-20240217 md 갱신

--- a/_posts/Coding_Test/Baekjoon_Concept/2024-02-17-(백준_필수4)알고리즘 필수 코드암기.md
+++ b/_posts/Coding_Test/Baekjoon_Concept/2024-02-17-(백준_필수4)알고리즘 필수 코드암기.md
@@ -12,15 +12,13 @@ typora-root-url: ../../..
 
 
 
-# Intro
+**위상정렬, 플로이드, 다익스트라, 프림, 크루스칼, BFS, DFS, 순열, 조합, 부분집합, 이분탐색 등 기본적인 알고리즘 코드 암기 연습을 위해 작성**
 
-**코드 암기 연습을 위해 작성한다.**
+<br>
 
-- 위상정렬, 플로이드, 다익스트라, 프림, 크루스칼, BFS, DFS, 순열, 조합, 부분집합, 이분탐색
+<br>
 
-<br><br>
-
-# 연습
+## 연습
 
 **BFS, DFS, 순열, 조합, 부분집합**
 
@@ -227,9 +225,11 @@ for (int i = 0; i < N-2; i++) { // N-2 -> i, st, en 순서 인덱스 임으로
 }
 ```
 
-<br><br>
+<br>
 
-# 답안
+<br>
+
+## 답안
 
 **BFS, DFS, 순열, 조합, 부분집합**
 
@@ -776,7 +776,9 @@ for (int i = 0; i < N-2; i++) { // N-2 -> i, st, en 순서 인덱스 임으로
 }
 ```
 
-<br><br>
+<br>
+
+<br>
 
 ## 출력 예시
 
@@ -924,3 +926,13 @@ x:9 y:9
 0 1 2 3 
 0 1 2 3 4 
 ```
+
+<br>
+
+<br>
+
+[알고리즘 예시1](https://m.blog.naver.com/bh_algo/223573656620)
+
+[알고리즘 예시2](https://m.blog.naver.com/bh_algo/223574889630)
+
+[알고리즘 예시3](https://m.blog.naver.com/bh_algo/223577906978)
