--- a/_posts/etc/Blog/2023-12-07-(Blog) 폰트 적용하기(+빨리 가져오기).md
+++ b/_posts/etc/Blog/2023-12-07-(Blog) 폰트 적용하기(+빨리 가져오기).md
@@ -1,5 +1,5 @@
 ---
-title:  "[Blog] 폰트 적용하기(+빨리 가져오기) - 깃 블로그 TIP 6"
+title:  "[Blog] 폰트 적용하기(+빨리 가져오기)"
 categories : Blog
 tag : [블로그, Git, git blog, 깃허브 블로그, Minimal-mistakes, 지킬, jekyll]
 toc: true
@@ -12,14 +12,12 @@ typora-root-url: ../../..
 
 
 
-# Intro
-
-**원하는 폰트를 적용해보자!**
+**원하는 곳에 원하는 폰트를 적용해보자!**<br>-> 페이지, 왼쪽 사이드바 부분, 상위바 부분, breadcrumbs(경로), 본문
 
 * 먼저 적용 전과 후를 확인
-* After 그림의 **"폰트"의 차이만 볼것!** 나머지 스타일링은 다음 포스팅 참고
+* After 그림의 **"폰트"의 차이만 볼 것!** 나머지 스타일링은 다음 포스팅 참고
 
-
+<br>
 
 **Before**
 
@@ -31,9 +29,11 @@ typora-root-url: ../../..
 
 ![image](https://github.com/BH946/bh946.github.io/assets/80165014/15e1c5c5-03e3-431a-b757-f689ec815302) 
 
-<br><br>
+<br>
 
-# 폰트 적용하기
+<br>
+
+## 폰트 등록하기
 
 사용폰트는 `Coming Soon, 나눔 고딕 코딩, Cafe24Oneprettynight, Iropke Batang` 이며 아래와 같은 순서로 진행
 
@@ -41,20 +41,20 @@ typora-root-url: ../../..
 
 <br><br>
 
-## 폰트 다운 + 빨리 가져오는 TIP
+### 폰트 다운 + 빨리 가져오는 TIP
 
 * 참고 : [폰트 사이트](https://fonts.google.com/)
 
-* 두가지 다운방식이 있고 둘다 사용중
+* 두 가지 다운 방식이 있고 둘 다 사용중
   * head 태그 방식 - "Nanum Gothic Coding", "Coming Soon", "Iropke Batang" 폰트 다운
   * css에 @import 방식 - "Cafe24Oneprettynight" 폰트 다운
 
 <br>
 
-`_layouts/default.html` 에 head 태그속에 폰트 다운
+`_layouts/default.html` 에 head 태그 속에 폰트 다운
 
 * "Nanum Gothic Coding", "Coming Soon", "Iropke Batang"
-* **css 빨리 가져오는 꿀팁 - preload**
+* **css 빨리 가져오는 꿀 팁 - preload**
 
 ```html
 <head>
@@ -88,15 +88,15 @@ typora-root-url: ../../..
 
 <br><br>
 
-## 전역변수 등록(폰트 등록)
+### 전역변수 등록(폰트 등록)
 
 `minimal-mistake 테마`는 `_sass/minimal-mistakes/_variable.scss` 파일에 전체적인 css 파일들이 사용할 **“전역 변수”**를 한곳에 모아 선언하고 있다.  
 따라서 여기에 원하는 폰트를 설정해주고, 생성한 **"전역 변수"**로 어디서든 폰트 적용을 할 것이다.  
 
-참고로 여기서 폰트 추가하자마자 적용이 되는 이유는 이 **"전역변수"**가 여기 저기서 이미 사용해서  
-폰트 적용중 이기 때문에 당연히 바로 적용이 된것이라는점!
+참고로 여기서 폰트 추가하자마자 적용이 되는 이유는 이 **"전역변수"**가 여기저기서 이미 사용해서  
+폰트 적용 중 이기 때문에 당연히 바로 적용이 된 것이라는 점!
 
-* 폰트가 여러개 나열되는 이유는 **우선순위** 때문이다
+* 폰트가 여러 개 나열되는 이유는 **우선순위** 때문이다
 
 ```scss
 /* system typefaces */
@@ -111,13 +111,15 @@ $sans-serif-narrow: $sans-serif !default;
 $helvetica: "Cafe24Oneprettynight", Helvetica, "Helvetica Neue", Arial, sans-serif !default;
 ```
 
-<br><br>
+<br>
 
-## 적용 커스텀
+<br>
+
+## 폰트 적용하기
 
 **폰트가 적용되는 부분들 위주로 확인**할 것!
 
-사진은 최근 사진을 가져다 쓴거기 때문에 **"페이지 구조"가 다를** 수 있고 이는 추후에 포스팅된 게시물을 참고하자
+사진은 최근 사진을 가져다 쓴 거기 때문에 **"페이지 구조"가 다를** 수 있고 이는 추후에 포스팅 된 게시물을 참고하자
 
 크게 아래와 같이 **7부위** 폰트 적용을 같이 확인해보자
 
@@ -132,7 +134,7 @@ $helvetica: "Cafe24Oneprettynight", Helvetica, "Helvetica Neue", Arial, sans-ser
   * 본문과 카테고리별 대표 페이지에 있는 경로
 * 본문
 
-<br>
+<br><br>
 
 ### 1. 페이지 - Recent Posts(최근 포스트)
 
@@ -167,7 +169,7 @@ $helvetica: "Cafe24Oneprettynight", Helvetica, "Helvetica Neue", Arial, sans-ser
 
 #### 게시물 - Cafe24Oneprettynight 
 
-위의 코드에서 보면 `list__item` 부분도 추가 했기 때문에 게시글에 "$cute" 폰트 적용이 됩니다!
+위의 코드에서 보면 `list__item` 부분도 추가했기 때문에 게시글에 "$cute" 폰트 적용이 됩니다!
 
 그리고 `archive__item-title` 부분에 "$cute" 꼭 적용! -> Cafe24Oneprettynight 폰트
 
@@ -188,7 +190,7 @@ $helvetica: "Cafe24Oneprettynight", Helvetica, "Helvetica Neue", Arial, sans-ser
 
 <img src="https://github.com/BH946/bh946.github.io/assets/80165014/26f034b1-4fd5-486c-8b61-62513d7ddeed" alt="image" style="zoom:80%;" /> 
 
-<br>
+<br><br>
 
 ### 2. 페이지 - 카테고리별 대표 페이지
 
@@ -218,7 +220,7 @@ $helvetica: "Cafe24Oneprettynight", Helvetica, "Helvetica Neue", Arial, sans-ser
 
 #### 게시물 - Cafe24Oneprettynight 
 
-위의 코드에서 보면 `list__item` 부분도 추가 했기 때문에 게시글에 "$cute" 폰트 적용이 됩니다!
+위의 코드에서 보면 `list__item` 부분도 추가했기 때문에 게시글에 "$cute" 폰트 적용이 됩니다!
 
 그리고 `archive__item-title` 부분에 "$cute" 꼭 적용! -> 위에서 적용했기에 코드 생략
 
@@ -232,7 +234,7 @@ $helvetica: "Cafe24Oneprettynight", Helvetica, "Helvetica Neue", Arial, sans-ser
 
 <img src="https://github.com/BH946/bh946.github.io/assets/80165014/5172f708-81e8-4bff-89d7-19e94cb470f3" alt="image" style="zoom:80%;" /> 
 
-<br>
+<br><br>
 
 ### 3. 왼쪽 사이드바 부분 - 게시물 안
 
@@ -268,14 +270,14 @@ $helvetica: "Cafe24Oneprettynight", Helvetica, "Helvetica Neue", Arial, sans-ser
 
 #### 위쪽 - 이미 폰트적용
 
-아래쪽 부분에 적용하려던게 위쪽 부분에도 전부 적용이 되었다.
+아래쪽 부분에 적용하려던 게 위쪽 부분에도 전부 적용이 되었다.
 
 * **큰 글자 :  $serif 인 "Coming Soon" 적용**
 * **작은 글자 : $cute 인 "Cafe24Oneprettynight" 적용**
 
 <img src="https://github.com/BH946/bh946.github.io/assets/80165014/e2113ef0-d515-42d5-8c47-b9a0dece41b1" alt="image" style="zoom:80%;" />  
 
-<br>
+<br><br>
 
 ### 4. 왼쪽 사이드바 부분 - 게시물 밖
 
@@ -321,11 +323,11 @@ sidebar{
 
 <img src="https://github.com/BH946/bh946.github.io/assets/80165014/6af0e31a-1f53-4aff-96d6-46faa7c4129e" alt="image" style="zoom:80%;" /> 
 
-<br>
+<br><br>
 
 ### 5. 상위바 부분
 
-* 제일 상위의 **Home, Category, Search** 가 있는곳을 의미한다.
+* 제일 상위의 **Home, Category, Search** 가 있는 곳을 의미한다.
 
 * `_masthead.scss` 에서 수정한다.
 
@@ -345,14 +347,14 @@ sidebar{
 
 ![image](https://github.com/BH946/bh946.github.io/assets/80165014/24e422b6-2f99-4b67-84f2-c39c2fb1f28d) 
 
-<br>
+<br><br>
 
 ### 6. breadcrumbs (경로부분) - 본문, 카테고리별
 
 **페이지 상단에 경로 보이는곳을 의미**
 
 * `_navigation.scss` 에서 수정
-* **한번도 사용 안했던 $sans-serif 를 적용**
+* **한 번도 사용 안 했던 $sans-serif 를 적용**
 
 ```scss
 .breadcrumbs{ 
@@ -368,11 +370,11 @@ sidebar{
 
 ![image](https://github.com/BH946/bh946.github.io/assets/80165014/742c1bf5-f586-4633-b98c-ba5eb7df8615) 
 
-<br>
+<br><br>
 
 ### 7. 본문 - 게시물 본문
 
-게시글 본문의 게시글 제목부분을 스타일링 한다.
+게시글 본문의 게시글 제목 부분을 스타일링 한다.
 
 * `_page.scss` 에서 설정한다.
 
@@ -384,9 +386,9 @@ sidebar{
 
 <br>
 
-본문 폰트를 안건들였으면 문제가없지만, 건들였다면 수정을 할 필요가 있다.
+본문 폰트를 안건들였으면 문제가 없지만, 건드렸다면 수정을 할 필요가 있다.
 
-* `_base.scss` 에서 폰트를 수정하면되고, 되도록이면 이 파일은 안 건드리게끔 사용하려고 한다.
+* `_base.scss` 에서 폰트를 수정하면 되고, 되도록이면 이 파일은 안 건드리게끔 사용하려고 한다.
 
 * `$global-font-family`, `$header-font-family` 전부 `$sans-serif` 로서 설정되어 있다.
 
