docs: blog/20231211까지 수정

--- a/_posts/etc/Blog/2023-12-05-(Blog) 카테고리와 목차 추가하기(상단바, 사이드바).md
+++ b/_posts/etc/Blog/2023-12-05-(Blog) 카테고리와 목차 추가하기(상단바, 사이드바).md
@@ -218,6 +218,16 @@ main:
 >
 > <img src="https://github.com/BH946/bh946.github.io/assets/80165014/39d970cb-d55e-4b69-bc10-f6006188efe5" alt="TOC" style="zoom:80%;" /> 
 
+<br>
+
+추가로 TOC 이름 설정하는 방법은 `_data/ui-text.yml` 를 수정한다.
+
+- `toc_label : "목차"`
+- `recent_posts : "Recent Posts"`
+- 참고로 Korean 언어 부분에서 수정해줘야 한다.
+
+- 각국 언어별로 어떤 텍스트로 표시되는지를 나열한 문서이다. Minimal Mistakes의 TOC 라벨은 기본적으로 “On this page”로 나타나는데 “목차”로 수정해보았다.
+
 <br><br>
 
 ### TIP) md파일 포스팅할 때(YFM 설정) + 카테고리 추가하는 흐름
