--- a/_posts/etc/Blog/2023-12-07-(Blog) 폰트 적용하기(+빨리 가져오기).md
+++ b/_posts/etc/Blog/2023-12-07-(Blog) 폰트 적용하기(+빨리 가져오기).md
@@ -1,7 +1,7 @@
 ---
 title:  "[Blog] 폰트 적용하기(+빨리 가져오기)"
 categories : Blog
-tag : [블로그, Git, git blog, 깃허브 블로그, Minimal-mistakes, 지킬, jekyll]
+tag : [블로그, Git, git blog, 깃허브 블로그, Minimal-mistakes, 지킬, jekyll, head, main, _variable, _archive, _navigation, _sidebar, _masthead, _page, _base]
 toc: true
 toc_sticky: true
 author_profile: false
