--- a/_posts/etc/Blog/2023-12-08-(Blog) 페이지 스타일링(1) - 폰트와 페이지 비율 수정.md
+++ b/_posts/etc/Blog/2023-12-08-(Blog) 페이지 스타일링(1) - 폰트와 페이지 비율 수정.md
@@ -1,7 +1,7 @@
 ---
-title:  "[Blog] 페이지 스타일링(1) - 폰트 & 페이지 비율 수정 - 깃 블로그 TIP 7"
+title:  "[Blog] 페이지 스타일링(1) - 폰트 & 페이지 비율 수정"
 categories : Blog
-tag : [블로그, Git, git blog, 깃허브 블로그, Minimal-mistakes, 지킬, jekyll]
+tag : [블로그, Git, git blog, 깃허브 블로그, Minimal-mistakes, 지킬, jekyll, _navigation, _reset, _masthead, _sidebar, _archive]
 toc: true
 toc_sticky: true
 author_profile: false
@@ -12,19 +12,17 @@ typora-root-url: ../../..
 
 
 
-# Intro
+**폰트 설정**과 페이지에서 **사이드바, 상단바 등등 간격**들 상세히 스타일링 해보자! 그리고 **창 크기마다 변화하는 페이지 비율**도 스타일링 해보자!
 
-현재 필자의 블로그처럼 폰트 스타일링을 하고싶다면 **"페이지 스타일링 시리즈"** 과정을 전부 따라하면 똑같이 변경할 수 있다!
-
-<br><br>
-
-# 페이지 스타일링(1)
-
-**폰트 설정**과 페이지에서 **사이드바, 상단바 등등 간격**들 상세히 스타일링 해보자!
+<br>
 
 <br>
 
 ## 1. 폰트 설정(크기, 진하게 등)
+
+**폰트 설정**과 페이지에서 **사이드바, 상단바 등등 간격**들을 먼저 상세히 스타일링 해보자!
+
+<br><br>
 
 ### 목차(TOC)
 
@@ -54,12 +52,12 @@ typora-root-url: ../../..
 
 <img src="https://github.com/BH946/bh946.github.io/assets/80165014/9274c89c-857c-43c4-aef2-f20afc48913f" alt="image" style="zoom:80%;" /> 
 
-<br>
+<br><br>
 
 ### html 기본
 
 * `_reset.scss` 에서 수정하며, 글자 크기는 자신이 원하는 크기로 자유롭게 커스텀
-* html 전체에 기본적인 폰트 크기는 이렇게 설정했고, 각 창 크기마다 설정또한 **17px**로 통일했다.
+* html 전체에 기본적인 폰트 크기는 이렇게 설정했고, 각 창 크기마다 설정 또한 **17px**로 통일했다.
 
 ```scss
 html {
@@ -85,13 +83,13 @@ html {
 }
 ```
 
-<br>
+<br><br>
 
 ### 상단바 - 진하게
 
 `Home, Category, Search`가 있는 웹의 제일 상단의 폰트 부분을 설정하는 방법이다.
 
-딱히 폰트 크기를 키울생각은 없고, **진하게** 바꾸고 싶어서 이부분만 추가했다.
+딱히 폰트 크기를 키울 생각은 없고, **진하게** 바꾸고 싶어서 이 부분만 추가했다.
 
 * `_sass/minimal-mistakes/_masthead.scss` 에서 수정
 
@@ -101,7 +99,7 @@ html {
 	font-weight: bold;    // 추가
 ```
 
-<br>
+<br><br>
 
 ### 사이드바 폰트 키우기
 
@@ -178,14 +176,16 @@ html {
 
 ![image](https://github.com/BH946/bh946.github.io/assets/80165014/5d48f416-58ed-49e8-a65e-fc8f83826c4f) 
 
-<br><br>
+<br>
+
+<br>
 
 ## 2. 페이지 너비 비율
 
 ### 좌, 우측 너비 - Breakpoints
 
 창 크기마다 화면 비율이 변하는데, 그 기준들을 설정한다.  
-차례대로 작은거 중간 큰것 순서이고, 젤 작은건 애초에 아래에서 설정하는 사이드바가 사라진다.
+차례대로 작은 거 중간 큰 것 순서이고, 젤 작은 건 애초에 아래에서 설정하는 사이드바가 사라진다.
 
 * 참고로 $large보다 작은 x너비에서부터 양쪽 사이드바가 사라진 형태가 나오기 시작한다.
 
@@ -203,15 +203,15 @@ $x-large: 1400px !default;
 $max-width: $x-large !default;
 ```
 
-<br>
+<br><br>
 
 ### 좌, 우측 너비 - Grid
 
-위에서 기준한 창 크기에 따라 좌, 우측 사이드바 화면 비율을 설정한다.  
-차례대로 창이 좁은것, 중간, 큰것 기준으로 설정한다.
+위에서 기준으로 한 창 크기에 따라 좌, 우측 사이드바 화면 비율을 설정한다.  
+차례대로 창이 좁은, 중간, 큰 기준으로 설정한다.
 
-* 혹시 몰라서 기존꺼는 주석으로 기억
-* 그리고 어떤 창 크기일때 설정하는건지 주석으로 설명
+* 혹시 몰라서 기존 것은 주석으로 기억
+* 그리고 어떤 창 크기일 때 설정하는 것인지 주석으로 설명
 
 ```scss
 /*
@@ -226,7 +226,7 @@ $right-sidebar-width: 250px !default; // $x-large에서 설정됨
 $right-sidebar-width-wide: 350px !default; // $max-width인가? 적용된걸 못 봄
 ```
 
-<br>
+<br><br>
 
 ### _archive.scss
 
@@ -234,7 +234,7 @@ $right-sidebar-width-wide: 350px !default; // $max-width인가? 적용된걸 못
 
 * `_sass/minimal-mistakes/_archive.scss` 에서 수정한다
 * padding을 통해서 줄을 조금 내렸고, margin을 통해서 아래 포스팅 제목들과 거리를 두었다.
-* "카테고리별 대표 페이지 제목" 부분에 사용중인 스타일!
+* "카테고리별 대표 페이지 제목" 부분에 사용 중인 스타일!
 
 ```scss
 .archive__subtitle {
@@ -304,8 +304,8 @@ $right-sidebar-width-wide: 350px !default; // $max-width인가? 적용된걸 못
 
 **적용 그림**
 
-* 물론, 아직 적용하지 않은 스타일링도 사진속에는 적용이 되어있는데 최근에 찍은 사진이기 때문이다.
-* 다음 포스팅도 계속 따라오면 아래처럼 완벽히 동일해질 것이다!
-* 여기서는 **전체적인 화면 비율**의 바뀐점과 **게시물들 간격**들이 수정됨을 확인하자@@
+* 물론, 아직 적용하지 않은 스타일링도 사진 속에는 적용이 되어있는데 최근에 찍은 사진이기 때문이다.
+* 다음 포스팅도 계속 따라오면 아래처럼 완벽히 같아질 것이다!
+* 여기서는 **전체적인 화면 비율**의 바뀐 점과 **게시물들 간격**들이 수정됨을 확인하자@@
 
 ![image](https://github.com/BH946/bh946.github.io/assets/80165014/2806efa0-9284-4afa-ac36-495e3aa19c5c) 
