--- a/_posts/etc/Blog/2023-12-09-(Blog) 페이지 스타일링(2) - 카테고리와 태그 모양 수정.md
+++ b/_posts/etc/Blog/2023-12-09-(Blog) 페이지 스타일링(2) - 카테고리와 태그 모양 수정.md
@@ -1,7 +1,7 @@
 ---
-title:  "[Blog] 페이지 스타일링(2) - 카테고리 & 태그 모양 수정 - 깃 블로그 TIP 8"
+title:  "[Blog] 페이지 스타일링(2) - 카테고리 & 태그 모양 수정"
 categories : Blog
-tag : [블로그, Git, git blog, 깃허브 블로그, Minimal-mistakes, 지킬, jekyll]
+tag : [블로그, Git, git blog, 깃허브 블로그, Minimal-mistakes, 지킬, jekyll, archive-single, _base, _page]
 toc: true
 toc_sticky: true
 author_profile: false
@@ -12,33 +12,25 @@ typora-root-url: ../../..
 
 
 
-# Intro
-
-필자의 블로그를 보면 게시판 부분에 "카테고리, 태그" 모양이 좀 특이할 것이다.
-
-이를 따라해보자!
+**필자의 블로그를 보면 게시판 부분에 "카테고리, 태그" 모양이 네모로 감싸져 있는데 이처럼 스타일링을 해보자!**
 
 * 아래 모양처럼 바꾸는 것 -> "네모로 감싸져 있는 Blog"
 
 ![image](https://github.com/BH946/bh946.github.io/assets/80165014/70d1f951-f50e-4b45-8c1c-0d55d6342a31) 
 
-<br><br>
-
-# 페이지 스타일링(2)
-
-참고로 태그 스타일링은 생략합니다.
-
-왜냐하면 태그는 안보이게 제거했기 때문!
+<br>
 
 <br>
 
 ## 카테고리 스타일링
 
+참고로 태그 스타일링은 생략! -> 태그는 안 보이게 했기 때문
+
 * `_includes/archive-single.html` 에서 수정
 * `h2태그`로 감싸주며, 각각 margin을 적절히 주고, 날짜가 먼저 나오게 순서도 변경해준다
 * 그리고 진하게를 없애주고, 사이즈도 적절히 수정해준다
 
-* `%` 와 `{` 를 함께 사용하는 ruby 문법때문에 사진으로 코드 대체
+* `%` 와 `{` 를 함께 사용하는 ruby 문법 때문에 사진으로 코드 대체
 
  ![image](https://github.com/BH946/bh946.github.io/assets/80165014/c3e0b0c3-93f1-42eb-a292-6c114149a2c8) 
 
