--- a/_posts/etc/Blog/2023-12-11-(Blog) 페이지 스타일링(4) - 프로필과 스크롤바 수정.md
+++ b/_posts/etc/Blog/2023-12-11-(Blog) 페이지 스타일링(4) - 프로필과 스크롤바 수정.md
@@ -1,7 +1,7 @@
 ---
-title:  "[Blog] 페이지 스타일링(4) - 프로필 & 스크롤바 수정 - 깃 블로그 TIP 10"
+title:  "[Blog] 페이지 스타일링(4) - 프로필 & 스크롤바 수정"
 categories : Blog
-tag : [블로그, Git, git blog, 깃허브 블로그, Minimal-mistakes, 지킬, jekyll]
+tag : [블로그, Git, git blog, 깃허브 블로그, Minimal-mistakes, 지킬, jekyll, head, author-profile, _config, _masthead]
 toc: true
 toc_sticky: true
 author_profile: false
@@ -12,17 +12,13 @@ typora-root-url: ../../..
 
 
 
-# Intro
-
-**아래 그림처럼 "프로필" 과 "스크롤바" 를 따라해보자!**
+**아래 그림처럼 "프로필" 과 "스크롤바" 스타일링을 따라 해보자!**
 
 ![image](https://github.com/BH946/bh946.github.io/assets/80165014/1c3cdd5f-7f30-457b-bdbb-3ac2952e3c41) 
 
-<br><br>
+<br>
 
-# 페이지 스타일링(4)
-
-
+<br>
 
 ## 스크롤바 커스텀
 
@@ -46,9 +42,11 @@ typora-root-url: ../../..
 </style>
 ```
 
-<br><br>
+<br>
 
-## 프로필 약간 수정
+<br>
+
+## 프로필 커스텀
 
 ### 사진 추가
 
@@ -56,9 +54,9 @@ typora-root-url: ../../..
 
 * 참고로 나는 a태그로 링크 타게하고 싶지는 않아서 없애주었다.
 
-* 또한 크기 등 속성을 조절 하였다.
+* 또한 크기 등 속성을 조절하였다.
 
-  * **이는 `_sdiebar.scss` 에서 `author__avatar` 를 수정하는걸 추천**
+  * **이는 `_sdiebar.scss` 에서 `author__avatar` 를 수정하는 걸 추천**
 
   * 여기서 너비도 수정해주었다.
 
@@ -72,20 +70,20 @@ typora-root-url: ../../..
 
 ![image-20230315021822610](https://github.com/BH946/bh946.github.io/assets/80165014/8b02829a-fbd2-410c-82aa-83e9c30b86da) 
 
-<br>
+<br><br>
 
 ### _config.yml
 
-**사진 추가를 여기서 링크를 달아줘야한다.**
+**사진 추가를 여기서 링크를 달아줘야 한다.**
 
 * avatar 속성에 **링크를 적용**해주면 된다.
-* name, title 등등 많은 정보들을 바꿀수 있으므로 중요한 파일이다.
+* name, title 등등 많은 정보를 바꿀 수 있으므로 중요한 파일이다.
 
 <br>
 
-참고로 이 _config.yml에서 수정하면 만약 서버 구동시 재시작해야 적용이 된다.
+참고로 이 _config.yml에서 수정하면 만약 서버 구동 시 재시작해야 적용이 된다.
 
-<br>
+<br><br>
 
 ### 제일 상단에 프로필 그림 커스텀
 
@@ -94,15 +92,3 @@ typora-root-url: ../../..
 * `_masthead.scss` 에서 `.site_logo img` 를 찾아가서 
 
 * `border-radius: 20%;` 를 추가해준다.
-
-<br><br>
-
-## TOC, 최근포스트 이름 수정 - ui_text.yml
-
-이미 앞에서 포스팅 했던 내용이기에 간단히 설명한다
-
-* `_data/ui-text.yml` 를 수정한다.
-  * `toc_label : "목차"`
-  * `recent_posts  : "Recent Posts"`
-  * 참고로 Korean 언어 부분에서 수정해줘야 한다.
-* 각국 언어별로 어떤 텍스트로 표시되는지를 나열한 문서이다. Minimal Mistakes의 TOC 라벨은 기본적으로 “On this page”로 나타나는데 "목차"로 수정해보았다. 
