--- a/_posts/etc/Blog/2023-12-10-(Blog) 페이지 스타일링(3) - 소제목(h1,h2), code블록 수정.md
+++ b/_posts/etc/Blog/2023-12-10-(Blog) 페이지 스타일링(3) - 소제목(h1,h2), code블록 수정.md
@@ -1,7 +1,7 @@
 ---
-title:  "[Blog] 페이지 스타일링(3) - h1,h2,code 등 수정 - 깃 블로그 TIP 9"
+title:  "[Blog] 페이지 스타일링(3) - 소제목(h1,h2), code블록 수정"
 categories : Blog
-tag : [블로그, Git, git blog, 깃허브 블로그, Minimal-mistakes, 지킬, jekyll]
+tag : [블로그, Git, git blog, 깃허브 블로그, Minimal-mistakes, 지킬, jekyll, _page, _base]
 toc: true
 toc_sticky: true
 author_profile: false
@@ -13,13 +13,13 @@ typora-root-url: ../../..
 
 
 
-# Intro
+
+
+**"소제목"을 스타일링 해보고, code 블럭의 폰트를 키우자!**
 
 **사진을 보면 "페이지 스타일링(2)" 는 h1이고, "카테고리 스타일링" 은 h2 이다.**
 
-**그리고 "inline code블럭" 이 크기가 작아서 이를 수정한다.**
-
-**이처럼 "소제목"을 스타일링 해보고, code 블럭의 폰트를 키우자!**
+**그리고 "inline code블럭" 이 크기가 작아서 이를 스타일링 한다.**
 
 ![image](https://github.com/BH946/bh946.github.io/assets/80165014/3937a0b6-e232-4a5d-8d13-6faf9dd4f593) 
 
@@ -35,9 +35,9 @@ typora-root-url: ../../..
 
 ![nxt](https://github.com/BH946/bh946.github.io/assets/80165014/71e57c4d-0a51-4ab8-9004-b611b8335ea3)  
 
-<br><br>
+<br>
 
-# 페이지 스타일링(3)
+<br>
 
 ## 소제목
 
@@ -67,6 +67,8 @@ typora-root-url: ../../..
   }
 }
 ```
+
+<br>
 
 <br>
 
