docs: blog/전체수정.md

--- a/_posts/etc/Blog/2023-12-12-(Blog) 지킬 테마 skin 수정(색상 적용).md
+++ b/_posts/etc/Blog/2023-12-12-(Blog) 지킬 테마 skin 수정(색상 적용).md
@@ -1,7 +1,7 @@
 ---
-title:  "[Blog] 지킬 테마 skin 수정(색상 적용) - 깃 블로그 TIP 11"
+title:  "[Blog] 지킬 테마 skin 수정(색상 적용)"
 categories : Blog
-tag : [블로그, Git, git blog, 깃허브 블로그, Minimal-mistakes, 지킬, jekyll]
+tag : [블로그, Git, git blog, 깃허브 블로그, Minimal-mistakes, 지킬, jekyll, 배경색, 폰트, skin]
 toc: true
 toc_sticky: true
 author_profile: false
@@ -12,12 +12,7 @@ typora-root-url: ../../..
 
 
 
-# Intro
-
-**지킬 테마를 수정하기 위해 skin을 변경해보자!**
-
-* 배경색과 폰트색상 등이 변경
-* 아래 그림 참고
+**지킬 테마(배경색)를 수정하기 위해 skin을 변경해보자! + 폰트 색상도 추가로 변경해보자!**
 
 skin이 `dirt` 일 때
 
@@ -29,17 +24,19 @@ skin이 `myskin` 일 때
 
 ![image](https://github.com/BH946/bh946.github.io/assets/80165014/b7b2446a-e4d9-4f6f-ab71-39b63ed59b10)  
 
-<br><br>
+<br>
 
-# 지킬 테마 수정
+<br>
+
+## 지킬 테마 수정
 
 **다음과 같은 순서로 진행하자!**
 
 `myskin 제작 -> myskin 적용 -> 폰트 색상 커스텀`
 
-<br>
+<br><br>
 
-## myskin 제작
+### myskin 제작
 
 `_sass/minimal-mistakes/skins/_myskin.scss` 가 없다면 만들면 되고 있으면 바로 수정하자
 
@@ -82,7 +79,7 @@ $navicon-link-color-hover: mix(#000, $background-color, 30%) !default;
 
 <br><br>
 
-## myskin 적용
+### myskin 적용
 
 `_config.yml` 수정을 통해 **"myskin"** 로 수정
 
@@ -92,13 +89,13 @@ minimal_mistakes_skin    : "myskin" # "air", "aqua", "contrast", "dark", "dirt",
 
 <br><br>
 
-## 폰트 색상 커스텀
+### 폰트 색상 커스텀
 
-**테마 수정으로 인해 폰트 색상들로 원하지 않은 색상으로 변한것들도 많기 때문에 커스텀 진행!**
+**테마 수정 때문에 폰트 색상이 원하지 않은 색상으로 변한 것들도 많아서 커스텀 진행!**
 
 <br>
 
-### 사이드바 설정
+#### 사이드바 설정
 
 * `_navigation.scss`
 
@@ -116,7 +113,7 @@ minimal_mistakes_skin    : "myskin" # "air", "aqua", "contrast", "dark", "dirt",
 
 <br>
 
-### 게시물 제목, 페이지 제목
+#### 게시물 제목, 페이지 제목
 
 * `archive.scss`
 
@@ -133,10 +130,10 @@ minimal_mistakes_skin    : "myskin" # "air", "aqua", "contrast", "dark", "dirt",
 
 <br>
 
-### 게시물 본문 제목란
+#### 게시물 본문 제목란
 
 * `_page.scss`
-* 만약 적용이 안되면 a태그에 컬러 설정있는지 확인 
+* 만약 적용이 안 되면 a태그에 컬러 설정 있는지 확인 
 
 ```scss
 .page__title {
