--- a/_posts/etc/Blog/2024-02-10-(Blog) 페이지 스타일링(5) - 코드블록 사이즈 수정.md
+++ b/_posts/etc/Blog/2024-02-10-(Blog) 페이지 스타일링(5) - 코드블록 사이즈 수정.md
@@ -1,7 +1,7 @@
 ---
-title:  "[Blog] 페이지 스타일링(5) - 코드블록 사이즈 수정 - 깃 블로그 TIP 13"
+title:  "[Blog] 페이지 스타일링(5) - 코드블록 사이즈 수정"
 categories : Blog
-tag : [블로그, Git, git blog, 깃허브 블로그, Minimal-mistakes, 지킬, jekyll]
+tag : [블로그, Git, git blog, 깃허브 블로그, Minimal-mistakes, 지킬, jekyll, _syntax]
 toc: true
 toc_sticky: true
 author_profile: false
@@ -13,26 +13,26 @@ typora-root-url: ../../..
 
 
 
-# Intro
+**코드블록 내부의 사이즈가 좀 작다고 생각하여 아래처럼 스타일링 해보자!**
 
-코드블록 내부의 사이즈가 좀 작다고 생각하여 아래처럼 수정하고자 한다.
+**먼저 변경 전과 변경 후의 모습을 살펴보자.**
 
-먼저 변경전과 변경후의 모습을 살펴보자.
-
-**변경전**
+**변경 전**
 
 ![image](https://github.com/BH946/bh946.github.io/assets/80165014/681da58c-82b6-494f-b6f9-bf7621d73682)
 
 <br>
 
-**변경후** 
+**변경 후** 
 
 
 ![image](https://github.com/BH946/bh946.github.io/assets/80165014/354ca6e5-fdd8-46fd-9476-78c52767966e) 
 
-<br><br>
+<br>
 
-# 수정방법은?
+<br>
+
+## 수정방법은?
 
 너무 간단하다. `_sass/minimal-mistakes/_syntax.scss` 를 찾아가서 아래처럼 수정하면 된다.
 
