docs: WoowaCourse/전체.md 수정

--- a/_posts/etc/WoowaCourse/2023-11-01-우테코 프리코스 2주차.md
+++ b/_posts/etc/WoowaCourse/2023-11-01-우테코 프리코스 2주차.md
@@ -12,7 +12,7 @@ typora-root-url: ../../..
 
 
 
-# 2주차 - 테스트
+## 2주차 - 테스트
 
 **1주차 피드백에서 필요없는 파일은 깃에 관리할 필요가 없다는 이야기가 있었다.**
 
@@ -28,30 +28,32 @@ typora-root-url: ../../..
 
 **마지막으로 깃 커밋 컨밴션과 자바 컨밴션을 지켜주자!**
 
-<br><br>
+<br>
 
-## 해결과정 - 자동차 경주
+<br>
+
+## 해결 과정 - 자동차 경주
 
 **기능 요구 사항을 작성하고, 기능목록을 작성한 후 코드 작성을 시작하는 식으로 바꿨다!**
 
-**다만, 기능목록 작성이 아직 익숙하지가 않아서 이부분은 코드 구현을 하면서도 계속 수정을 했었다.**
+**다만, 기능목록 작성이 아직 익숙하지가 않아서 이 부분은 코드 구현을 하면서도 계속 수정을 했었다.**
 
-**그리고 이름지정도 신경써주는게 생각보다 머리아팠고, 깃 커밋을 각 기능구현마다 신경써서 하는것도 조금 복잡했다고 생각한다.. 익숙해지자.**
+**그리고 이름지정도 신경 써주는게 생각보다 머리아팠고, 깃 커밋을 각 기능구현마다 신경 써서 하는것도 조금 복잡했다고 생각한다.. 익숙해지자.**
 
 **마지막으로 `assertThatThrownBy().isInstanceOf(예외.class), assertThat().contains` 등등 테스트 코드 작성에 필요한 기본적인 메소드들도 필수로 기억해두자**
 
 * 범위 테스트하기 좋은 : `assertThat(Arrays.stream(result).allMatch(v->v>=0 && v<=9)).isTrue();`
 
-<br>
+<br><br>
 
 ### 기능목록
 
 * [x] 0-9사이 랜덤 값을 생성한다. - NumberGenerator#createRandomNumbers()
 * [x] 자동차 객체를 생성한다. - CarGenerator#CarGenerator()
 * [x] (전진일시)자동차 위치를 기록한다. - Application#racing()
-* [x] 제일 멀리간 자동차들이 최종 우승자이다. - Referee#calculateCars()
+* [x] 제일 멀리 간 자동차들이 최종 우승자이다. - Referee#calculateCars()
 
-<br>
+<br><br>
 
 ### 기능 요구 사항
 
@@ -69,8 +71,10 @@ ex. 자동차 입력 pobi,woni,jun 에 회수 2일 때
 
 최종 우승자 : pobi
 
-<br><br>
+<br>
 
-# 마무리
+<br>
 
-**생략.**
+## 마무리
+
+**생략**
