--- a/_posts/etc/WoowaCourse/2023-11-08-우테코 프리코스 3주차.md
+++ b/_posts/etc/WoowaCourse/2023-11-08-우테코 프리코스 3주차.md
@@ -12,12 +12,12 @@ typora-root-url: ../../..
 
 
 
-# 3주차 - 함수 분리
+## 3주차 - 함수 분리
 
 * **하나의 함수는 하나의 기능을 반드시 지키자**
   * 이를 위해 **15라인 이내**로 함수 작성을 하려고 노력하자
 * **변수 이름에 자료형은 사용하지 말자**
-* **값을 하드코딩 하지말자 - static final 같이 상수를 권장**
+* **값을 하드코딩 하지 말자 - static final 같이 상수를 권장**
 * **else 를 사용하지 말고 해결해 보자**
 * **Java Enum 을 적용해보자**
 * **도메인 로직에 단위 테스트를 진행하자**
@@ -25,17 +25,19 @@ typora-root-url: ../../..
   * 깃커밋 컨벤션
   * 자바 컨벤션
 
-<br><br>
-
-## 해결과정 - 로또
-
-**기능 목록 작성 후 규칙에 맞춰서 구현**
+<br>
 
 <br>
 
-## 기능 목록
+## 해결 과정 - 로또
 
-### 1. 입력 기능
+**기능 목록 작성 후 규칙에 맞춰서 구현**
+
+<br><br>
+
+### 기능 목록
+
+#### 1. 입력 기능
 
 * [x] 로또 구입 금액을 입력 - InputLotto#purchaseMoney(), readMoney()
   * [x] 사용자가 잘못된 값을 입력하면 예외 발생 - IllegalArgumentException
@@ -48,7 +50,7 @@ typora-root-url: ../../..
 
 <br>
 
-### 2. 로또 기능
+#### 2. 로또 기능
 
 * [x] 1개의 로또 발행 - LottoGenerator#createLotto()
   * [x] X개의 로또 기록 - LottoGenerator#createLottos()
@@ -58,7 +60,7 @@ typora-root-url: ../../..
 
 <br>
 
-### 3. 출력 기능
+#### 3. 출력 기능
 
 * [x] 로또 수량 출력 - OutputLotto#counts()
 * [x] 로또 번호 출력(오름차순) - OutputLotto#numbers()
@@ -67,18 +69,18 @@ typora-root-url: ../../..
 
 <br>
 
-### 4. 추가 예외 처리
+#### 4. 추가 예외 처리
 
 * [x] 숫자 범위 예외 처리용 함수 - InputLotto#exceptNumberRange()
 * [x] 로또 숫자 중복 검증 함수 - Lotto#validateDuplication()
 
 <br><br>
 
-## 요구사항 분석
+### 요구사항 분석
 
-### 1. 입출력 요구 사항
+#### **1. 입 출력 요구사항**
 
-#### 1-1. 입력
+**입력**
 
 * **로또 구입 금액 입력**
   * 구입 금액은 **1000원 단위**
@@ -89,7 +91,7 @@ typora-root-url: ../../..
 
 <br>
 
-#### 1-2. 출력
+**출력**
 
 * **로또 수량과 번호를 출력**
   * 번호는 오름차순 정렬
@@ -103,7 +105,7 @@ typora-root-url: ../../..
 
 <br>
 
-### 2. 로또 기능 분석
+#### 2. 로또 기능 분석
 
 * **1개의 로또 발행** 
   * 중복되지 않는 6개의 숫자
@@ -117,45 +119,49 @@ typora-root-url: ../../..
 
 <br>
 
-### 3. 테스트 예제
+#### 3. 테스트 예제
 
-* **입력**
+**입력**
 
-  * `구입금액을 입력해 주세요.`
-  * 로또 구입 금액 : `14000`
-    * 14000 / 1000 을 통해 14개의 로또가 발행되어야 함
-    * 만약 14001 이라면? 예외 발생
-  * 담청 번호 : `1,2,3,4,5,6`
-  * 보너스 번호 : `7`
+* `구입금액을 입력해 주세요.`
+* 로또 구입 금액 : `14000`
+  * 14000 / 1000 을 통해 14개의 로또가 발행되어야 함
+  * 만약 14001 이라면? 예외 발생
+* 담청 번호 : `1,2,3,4,5,6`
+* 보너스 번호 : `7`
 
-* **출력**
+<br>
 
-  * 구매수량 출력 : `8개를 구매했습니다.`
+**출력**
 
-  * 로또 번호 출력(오름차순)
+* 구매수량 출력 : `8개를 구매했습니다.`
 
-    * `[8, 21, 23, 41, 42, 43]`
-    * `[3, 5, 11, 16, 32, 38]`
-    * 등등... 8개..
+* 로또 번호 출력(오름차순)
 
-  * 당첨 내역을 출력
+  * `[8, 21, 23, 41, 42, 43]`
+  * `[3, 5, 11, 16, 32, 38]`
+  * 등등... 8개..
 
-    * `3개 일치 (5,000원) - 1개`
-    * `4개 일치 (50,000원) - 0개`
-    * `5개 일치 (1,500,000원) - 0개`
-    * `5개 일치, 보너스 볼 일치 (30,000,000원) - 0개`
-    * `6개 일치 (2,000,000,000원) - 0개`
+* 당첨 내역을 출력
 
-  * 수익률 출력(소수점 둘째 자리 반올림) : `총 수익률은 62.5%입니다.`
+  * `3개 일치 (5,000원) - 1개`
+  * `4개 일치 (50,000원) - 0개`
+  * `5개 일치 (1,500,000원) - 0개`
+  * `5개 일치, 보너스 볼 일치 (30,000,000원) - 0개`
+  * `6개 일치 (2,000,000,000원) - 0개`
 
-  * 예외 상황 : `[ERROR] 로또 번호는 1부터 45 사이의 숫자여야 합니다.`
+* 수익률 출력(소수점 둘째 자리 반올림) : `총 수익률은 62.5%입니다.`
 
-<br><br>
+* 예외 상황 : `[ERROR] 로또 번호는 1부터 45 사이의 숫자여야 합니다.`
 
-# 마무리
+<br>
+
+<br>
+
+## 마무리
 
 **확실히 기능 목록 작성이 조금 늘었다고 생각**
 
-**Java Enum 을 적용할만한 부분은 생각했긴 했지만 사용법을 모르겠어서 적용 못했었다.**
+**Java Enum 을 적용할만한 부분은 생각했지만, 사용법을 몰라서 적용 못 했었다.**
 
 **다른 사람들의 구현을 보고 익혀두자..**
